--- a/Pastelaria.html
+++ b/Pastelaria.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<img id="banner" src="banner.jpg">
+		<img id="banner" src="images.jpeg">
 		<div class="principal">
 			<h1>Sobre a Pastelaria Dois Irmãos</h1>
 	 
@@ -15,7 +15,7 @@
 
 		<p>Ganhou destaque na pandemia onde tinhamos o melhor e mais rápido sistema de entregas onde os motoboys tinham um pequeno <strong>forno</strong>, para seu pastel chegar quentinho
 
-		<p>Nosso ambiente conta com os melhores equipamentos e profissionais, onde nosso principal objetivo é server<strong>você</strong></p>.Venha conhecer!
+		<p>Nosso ambiente conta com os melhores equipamentos e profissionais, onde nosso principal objetivo é servir <strong>você</strong></p>.Venha conhecer!
 
 		</div>
 
@@ -29,7 +29,7 @@
 				<li class="itens">Profissionais Qualificados</li>
 			</ul>
 
-			<img src="Pastelaria.jpeg" class="imagembeneficios">
+			<img src="caracomendopastel.jpeg" class="imagembeneficios">
 		</div>
 	</body>
 </html>
